# java-repo-wust

./: .gitignore  LICENSE  README.md
lab01/: make.cmd  run.cmd
lab02/: make.cmd  run.cmd
lab03/: polecenie.txt  readme.md
lab05/: README.md  move-maven-jars.cmd  polecenie.txt  run-maven-no-classes.cmd  run-modular-no-classes.cmd  run-modular.cmd
lab05/lab5-maven/: pom.xml
lab06/: polecenie.txt
lab06/api/: pom.xml
lab06/billboard/: pom.xml
lab06/manager/: pom.xml
lab07/: build.cmd  pom.xml
lab08/: init-postgres.cmd  polecenie.txt  pom.xml
lab09/: build.cmd  install-library.cmd  lab9-dev-pub.cer  polecenie.txt
lab1/: README.md  build.cmd  make.cmd  run.cmd
lab10/: build.cmd  polecenie.txt  run.cmd  run8.cmd
lab10/inno-setuo/: installer-script.iss
lab11/: build.cmd  copy-dll.cmd  copy-files.cmd  generate-h.cmd  polecenie.txt  purge-nat.cmd  run.cmd
lab11/j-side/: pom.xml  (+1 more)
lab11/nat-side/: CMakeLists.txt  SortingMachine.cpp  SortingMachine.h  build.cmd  library.h  pl_edu_pwr_java_lab11_NativeSortingMachine.cpp  pl_edu_pwr_java_lab11_NativeSortingMachine.h
lab12/: README.md  build.cmd  polecenie.txt  run.cmd  setup-dependencies.cmd
lab13/: README.md  build.cmd  guests.csv  polecenie.txt  run.cmd  setup-dependencies.cmd
lab2/: README.md
lab3/: polecenie.txt  pom.xml
lab4/: polecenie.txt  pom.xml
lab5/: file.csv  run-maven.cmd  run-modular-no-classes.cmd
lab6/: polecenie.txt
lab7/: build.cmd  polecenie.txt  pom.xml  run.cmd
lab8/: build.cmd  polecenie.txt  pom.xml  run.cmd
lab9/: build.cmd  javadev.jks  polecenie.txt  run.cmd
(+379 files in other folders)
